--- a/pupper.xml.in
+++ b/pupper.xml.in
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <puppy>
-  <db-password>passw0rd</db-password>
+  <db-user>@SQL_USER@</db-user>
+  <db-password>@SQL_PASSWORD@</db-password>
   <time-limit>60</time-limit>
   <k-limit>200</k-limit>
   <max-baud>1200</max-baud>
