--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ Makefile.in
 /install-sh
 /missing
 /stamp-h1
+/.deps
 
 # https://www.gnu.org/software/libtool/
 
@@ -98,3 +99,4 @@ dkms.conf
 *.tmp
 *.temp
 *.orig
+\#*
