Give up on mysql connector, and more hack

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,15 @@ CXXFLAGS += -ggdb -O0
 
 AM_CXXFLAGS = \
 	-I/usr/local/include/ncursesw \
-	-I/usr/local/mysql/connector-c++-8.0/include/
+	-I/usr/include/mysql \
+	-fdiagnostics-color=auto \
+	-std=c++17
 AM_LDFLAGS = \
 	-L/usr/local/lib \
-	-L/usr/local/mysql/connector-c++-8.0/lib64/debug
+	-L/usr/lib64/mysql
+
+# 	-I/usr/local/mysql/connector-c++-8.0/include/ \
+#	-L/usr/local/mysql/connector-c++-8.0/lib64/debug
 
 bin_PROGRAMS = pupper
 
@@ -23,8 +28,12 @@ pupper_SOURCES = app.cpp \
 	PupperTopics.hpp PupperTopics.cpp \
 	PupperTopicMenu.hpp PupperTopicMenu.cpp \
 	properties.hpp properties.cpp \
-	PupperDB.hpp PupperDB.cpp
-pupper_LDADD = -lmysqlcppconn8 -lncurses++w -lncursesw -lformw -lpanelw -lmenuw
+	PupperDB.hpp PupperDB.cpp \
+	PupperMessageViewer.hpp PupperMessageViewer.cpp 
+pupper_LDADD = -lmysqlclient -lpthread -lm -lrt -ldl \
+	-lncurses++w -lncursesw -lformw -lpanelw -lmenuw
+
+#pupper_LDADD = -lmysqlcppconn8 -lncurses++w -lncursesw -lformw -lpanelw -lmenuw
 
 sysconf_DATA = pupper.xml
 
